# cordite-libs

./: CMakeLists.txt
bson/: CMakeLists.txt
bson-cpp/inc/: bsonobj.h  misc.h
bson/inc/: bson-inl.h  bsonassert.h  bsonelement.h  bsonmisc.h  bsonobjbuilder.h  embedded_builder.h
bson/lib/: base64.h  nonce.cpp
bson/src/: bsonobj.cpp  oid.cpp
cmake/: FindProtocolBuffers.cmake  PreCompiledHeaders.cmake  config_header.cmake
google/: CMakeLists.txt  LICENSE  config.h.in
google/protobuf/: CMakeLists.txt  message.h
google/protobuf/compiler/: CMakeLists.txt  command_line_interface.cc
yaml-cpp/: CMakeLists.txt
zmq/: CMakeLists.txt
zmq/src/: platform.hpp.in
