set(PBC_H
	code_generator.h
	command_line_interface.h
	subprocess.h
	zip_writer.h
	plugin.h
	plugin.pb.h
	cpp/cpp_enum.h
	cpp/cpp_enum_field.h
	cpp/cpp_extension.h
	cpp/cpp_field.h
	cpp/cpp_file.h
	cpp/cpp_generator.h
	cpp/cpp_helpers.h
	cpp/cpp_message.h
	cpp/cpp_message_field.h
	cpp/cpp_primitive_field.h
	cpp/cpp_service.h
	cpp/cpp_string_field.h
	java/java_enum.h
	java/java_enum_field.h
	java/java_extension.h
	java/java_field.h
	java/java_file.h
	java/java_generator.h
	java/java_helpers.h
	java/java_message.h
	java/java_message_field.h
	java/java_primitive_field.h
	java/java_service.h
	java/java_string_field.h
	python/python_generator.h
)
set(PBC_S
	code_generator.cc
	command_line_interface.cc
	subprocess.cc
	zip_writer.cc
	plugin.cc
	plugin.pb.cc
	cpp/cpp_enum.cc
	cpp/cpp_enum_field.cc
	cpp/cpp_extension.cc
	cpp/cpp_field.cc
	cpp/cpp_file.cc
	cpp/cpp_generator.cc
	cpp/cpp_helpers.cc
	cpp/cpp_message.cc
	cpp/cpp_message_field.cc
	cpp/cpp_primitive_field.cc
	cpp/cpp_service.cc
	cpp/cpp_string_field.cc
	java/java_enum.cc
	java/java_enum_field.cc
	java/java_extension.cc
	java/java_field.cc
	java/java_file.cc
	java/java_generator.cc
	java/java_helpers.cc
	java/java_message.cc
	java/java_message_field.cc
	java/java_primitive_field.cc
	java/java_service.cc
	java/java_string_field.cc
	python/python_generator.cc
	main.cc
)
add_executable(cordite-protoc ${PBC_S} ${PBR_H})
target_link_libraries(cordite-protoc cordite-protobuf)